Fri Feb  3 16:59:11 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * configure:

          Use the new *TAOv2*.mwc files when needed.

Fri Feb  3 14:28:48 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * examples/DCPS/ishapes/README:

          Removed trailing whitespace.

Thu Feb  2 22:02:02 UTC 2012  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/SetQosPartition/run_test.pl

          Update to not start InfoRepo when running rtps discovery.

        * dds/DCPS/RTPS/Sedp.cpp

          Additional conditional logging.
          Remove unconditional loggging.
          Clean up remote endpoint association tracking when unmatching
            due to remote QOS change.

Thu Feb  2 22:41:12 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * examples/DCPS/ishapes:
        * examples/DCPS/ishapes/BouncingShapeDynamics.hpp:
        * examples/DCPS/ishapes/BouncingShapeDynamics.cpp:
        * examples/DCPS/ishapes/Circle.hpp:
        * examples/DCPS/ishapes/Circle.cpp:
        * examples/DCPS/ishapes/DDSShapeDynamics.hpp:
        * examples/DCPS/ishapes/DDSShapeDynamics.cpp:
        * examples/DCPS/ishapes/FilterDialog.cpp:
        * examples/DCPS/ishapes/FilterDialog.hpp:
        * examples/DCPS/ishapes/LICENSING:
        * examples/DCPS/ishapes/README:
        * examples/DCPS/ishapes/ReaderQosDialog.hpp:
        * examples/DCPS/ishapes/ReaderQosDialog.cpp:
        * examples/DCPS/ishapes/Shape.hpp:
        * examples/DCPS/ishapes/Shape.cpp:
        * examples/DCPS/ishapes/ShapeDynamics.cpp:
        * examples/DCPS/ishapes/ShapeDynamics.hpp:
        * examples/DCPS/ishapes/ShapeType.idl:
        * examples/DCPS/ishapes/ShapesDialog.cpp:
        * examples/DCPS/ishapes/ShapesDialog.hpp:
        * examples/DCPS/ishapes/ShapesWidget.cpp:
        * examples/DCPS/ishapes/ShapesWidget.hpp:
        * examples/DCPS/ishapes/Square.cpp:
        * examples/DCPS/ishapes/Square.hpp:
        * examples/DCPS/ishapes/Triangle.cpp: