@@ -1593,6 +1593,10 @@ namespace {
         "  if (!(outer_strm >> disc) || !(outer_strm >> size)) {\n"
         "    return false;\n"
         "  }\n"
+        "  if (disc == OpenDDS::RTPS::PID_SENTINEL) {\n"
+        "    uni._d(OpenDDS::RTPS::PID_SENTINEL);\n"
+        "    return true;\n"
+        "  }\n"
         "  ACE_Message_Block param(size);\n"
         "  ACE_CDR::Octet* data = reinterpret_cast<ACE_CDR::Octet*>("
         "param.wr_ptr());\n"
